--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,5 @@ services:
   - type: web
     name: facebook-marketplace-bot
     env: python
-    buildCommand: |
-      pip install --upgrade pip
-      pip install -r requirements.txt
+    buildCommand: "pip install --upgrade pip && pip install -r requirements.txt"
     startCommand: "python main.py"
