--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: facebook-marketplace-bot
+    name: FacebookMarketplaceBot
     env: python
     buildCommand: "pip install --upgrade pip && pip install -r requirements.txt"
     startCommand: "python main.py"
